# depthai_robot

./: README.md
depthai_robot/: CMakeLists.txt  package.xml
depthai_robot/launch/: publish_stereo_inertial.launch.py
