<?xml version="1.0"?>
<package format="3">
  <name>depthai_robot</name>
  <version>0.1.0</version>
  <description>The depthai_robot launch package</description>

  <maintainer email="arlunan@ieee.org">ARLunan</maintainer>
  
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
